--- a/ColdCallsTracker/ColdCallsTracker/Views/Home/Index.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Views/Home/Index.cshtml
@@ -1,4 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<h1>Home</h1>
+<div class="row" >
+    <div class="col">
+        <h1>Home</h1>
+    </div>
+</div>
