--- a/ColdCallsTracker/ColdCallsTracker/Views/Home/Index.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Views/Home/Index.cshtml
@@ -1,8 +1,16 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model List<ColdCallsTracker.Code.Data.State>
+@{
+    ViewData["Title"] = "Главная";
 }
-<div class="row" >
+<div class="row">
     <div class="col">
-        <h1>Home</h1>
+        <h1>Главная</h1>
+        <hr />
+        <ul>
+            @foreach (var el in Model)
+            {
+                <li>@el.Name</li>
+            }
+        </ul>
     </div>
 </div>
