--- a/ColdCallsTracker/ColdCallsTracker/Views/Home/Index.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ColdCallsTracker.Code.Data.State>
+﻿@model List<ColdCallsTracker.Code.Data.Models.State>
 @{
     ViewData["Title"] = "Главная";
 }
