--- a/ColdCallsTracker/ColdCallsTracker/Views/Shared/_Layout.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Views/Shared/_Layout.cshtml
@@ -15,10 +15,12 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.2/dist/vue.js"></script>
+    
+    <script src="~/js/utils.js" asp-append-version="true"></script>
 
     @RenderSection("Scripts", required: false)
+    @RenderSection("Styles", required: false)
 </head>
 <body>
     <!-- Navigation -->
@@ -30,7 +32,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Companies">Компании</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Script">Скрипт</a>
+                    </li>
                 </ul>
             </div>
         </div>
