Ef model update

--- a/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Index.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Index.cshtml
@@ -13,14 +13,38 @@
     <script src="~/js/companies/companies-list.js" asp-append-version="true"></script>
 }
 
+<div>
+
+</div>
+
 <div class="companies-list-page">
 
     <table class="table table-bordered table-sm table-hover">
         <thead>
-        <tr>
-            <th></th>
-        </tr>
+            <tr>
+                <th>#</th>
+                <th>Название</th>
+                <th>Деятельность</th>
+                <th>Сайты</th>
+                <th>Примечание</th>
+                <th>Статус</th>
+                <th>Телефоны</th>
+                <th>Последняя запись</th>
+                <th>Действия</th>
+            </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+        <tr>
+            <td>#</td>
+            <td>Название</td>
+            <td>Деятельность</td>
+            <td>Сайты</td>
+            <td>Примечание</td>
+            <td>Статус</td>
+            <td>Телефоны</td>
+            <td>Последняя запись</td>
+            <td>Действия</td>
+        </tr>
+        </tbody>
     </table>
 </div>
