--- a/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Index.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Index.cshtml
@@ -19,32 +19,104 @@
 
 <div class="companies-list-page">
 
-    <table class="table table-bordered table-sm table-hover">
-        <thead>
+
+    <table class="table table-bordered table-sm table-hover header-table results-table">
+        <thead class="thead-light">
             <tr>
-                <th>#</th>
+                <th class="Id">
+                    <input type="number" placeholder="Id" class="form-control form-control-sm" />
+                </th>
+                <th>
+                    <input type="text" placeholder="Название" class="form-control form-control-sm" />
+                </th>
+                <th>
+                    <input type="text" placeholder="Деятельность" class="form-control form-control-sm" />
+                </th>
+                <th>
+                    <input type="text" placeholder="Сайты" class="form-control form-control-sm" />
+                </th>
+                <th>
+                    <input type="text" placeholder="Примечание" class="form-control form-control-sm" />
+                </th>
+                <th>
+                    <input type="text" placeholder="Телефоны" class="form-control form-control-sm" />
+                </th>
+                <th>
+                    <select class="form-control form-control-sm">
+                        <option value="">Любой</option>
+                        <option value="">В процессе</option>
+                        <option value="">Успех</option>
+                        <option value="">Отказ</option>
+                    </select>
+                </th>
+                <th>
+                    <div class="phones-wrapper">
+                        <input type="text" placeholder="C" class="form-control form-control-sm" />
+                        <input type="text" placeholder="По" class="form-control form-control-sm" />
+                    </div>
+
+                </th>
+                <th class="text-right actions-col">
+                    <div class="buttons-actions-container">
+                        <span class="btn btn-danger btn-sm">
+                            <i class="fas fa-undo"></i>
+                            
+                        </span>
+                        <span class="btn btn-success btn-sm">
+                            <i class="fas fa-search"></i>
+                            
+                        </span>
+                    </div>
+                </th>
+            </tr>
+            <tr>
+                <th class="Id">#</th>
                 <th>Название</th>
                 <th>Деятельность</th>
                 <th>Сайты</th>
                 <th>Примечание</th>
-                <th>Статус</th>
                 <th>Телефоны</th>
+                <th>Статус</th>
                 <th>Последняя запись</th>
-                <th>Действия</th>
+                <th class="actions-col" >Действия</th>
             </tr>
         </thead>
-        <tbody>
-        <tr>
-            <td>#</td>
-            <td>Название</td>
-            <td>Деятельность</td>
-            <td>Сайты</td>
-            <td>Примечание</td>
-            <td>Статус</td>
-            <td>Телефоны</td>
-            <td>Последняя запись</td>
-            <td>Действия</td>
-        </tr>
-        </tbody>
     </table>
+    <div class="overflow-wrapper">
+        <table class="table table-bordered table-sm table-hover body-table results-table table-striped">
+            <tbody>
+                @for (int i = 0; i < 100; i++)
+                {
+                    <tr class="data-tr" >
+                        <td class="Id">@(i)</td>
+                        <td>Название</td>
+                        <td>Деятельность</td>
+                        <td>Сайты</td>
+                        <td>Примечание</td>
+
+                        <td>Телефоны</td>
+                        <td>Статус</td>
+                        <td>Последняя запись</td>
+                        <td class="text-left actions-col" >
+                            <span class="btn btn-success btn-xs edit-btn">
+                                <i class="fas fa-edit"></i>
+                            </span>
+                            <span class="btn btn-danger btn-xs delete-btn">
+                                <i class="fas fa-trash"></i>
+                            </span>
+                        </td>
+                    </tr>
+                }
+
+                <tr>
+                    <td colspan="9">
+                        <span class="btn btn-block btn-primary text-center text-uppercase btn-sm">
+                            <i class="fas fa-download"></i>
+                            Загрузить еще
+                        </span>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
