--- a/ColdCallsTracker/ColdCallsTracker/wwwroot/css/site.css
+++ b/ColdCallsTracker/ColdCallsTracker/wwwroot/css/site.css
@@ -1,1 +1,108 @@
-﻿
+﻿.companies-list-page {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+}
+
+    .companies-list-page .header-table {
+        table-layout: fixed;
+    }
+
+    .companies-list-page .body-table {
+        table-layout: fixed;
+    }
+
+    .companies-list-page .results-table .Id {
+        width: 70px;
+    }
+
+    .companies-list-page .results-table td,
+    .companies-list-page .results-table th {
+        white-space: nowrap;
+        overflow-x: hidden;
+    }
+
+
+.overflow-wrapper {
+    height: calc(100vh - 174px);
+    overflow-y: overlay;
+    position: absolute;
+    top: 74px;
+    box-shadow: inset 0px 10px 6px -6px rgba(0,0,0,0.2);
+}
+
+.companies-list-page .header-table th {
+    vertical-align: top;
+}
+
+.phones-wrapper {
+    display: flex;
+}
+
+
+.btn-group-xs > .btn, .btn-xs {
+    padding: .25rem .4rem;
+    font-size: .875rem;
+    line-height: .5;
+    border-radius: .2rem;
+}
+
+.buttons-actions-container {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+    .buttons-actions-container > span {
+        width: 50%;
+        margin-left: 5px;
+    }
+
+        .buttons-actions-container > span:first-of-type {
+            margin-left: 0px !important;
+        }
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
+
+.results-table {
+    margin: 0px !important;
+    padding: 0px !important;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.data-tr .edit-btn,
+.data-tr .delete-btn {
+    visibility: hidden;
+}
+
+.data-tr:hover .edit-btn,
+.data-tr:hover .delete-btn {
+    visibility: visible !important;
+}
+
+.actions-col {
+    width: 103px;
+}
