--- a/ColdCallsTracker/ColdCallsTracker/wwwroot/css/site.css
+++ b/ColdCallsTracker/ColdCallsTracker/wwwroot/css/site.css
@@ -106,3 +106,13 @@ input[type=number]::-webkit-outer-spin-button {
 .actions-col {
     width: 103px;
 }
+
+.data-tr td {
+    font-size: 14px;
+    line-height: 14px;
+    vertical-align: middle;
+    height: 24px;
+    min-height: 24px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
