--- a/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Index.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Index.cshtml
@@ -19,6 +19,19 @@
 
 <div class="companies-list-page">
 
+    <div class="info-line">
+        <div class="row mb-2">
+            <div class="col-md-6 ">
+                <div>
+                    <strong>Список компаний &nbsp;&nbsp;</strong>
+                    <em>Отфильтровано 1235 из 17453, отображено 155</em>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <span class="btn btn-primary btn-sm float-right">Добавить</span>
+            </div>
+        </div>
+    </div>
 
     <table class="table table-bordered table-sm table-hover header-table results-table">
         <thead class="thead-light">
@@ -26,8 +39,8 @@
                 <th class="Id">
                     <input type="number" placeholder="Id" class="form-control form-control-sm" />
                 </th>
-                <th>
-                    <input type="text" placeholder="Название" class="form-control form-control-sm" />
+                <th class="order-column">
+                    <input type="text" placeholder="Название" class="form-control form-control-sm " />
                 </th>
                 <th>
                     <input type="text" placeholder="Деятельность" class="form-control form-control-sm" />
@@ -54,31 +67,64 @@
                         <input type="text" placeholder="C" class="form-control form-control-sm" />
                         <input type="text" placeholder="По" class="form-control form-control-sm" />
                     </div>
-
                 </th>
                 <th class="text-right actions-col">
                     <div class="buttons-actions-container">
                         <span class="btn btn-danger btn-sm">
                             <i class="fas fa-undo"></i>
-                            
+
                         </span>
                         <span class="btn btn-success btn-sm">
                             <i class="fas fa-search"></i>
-                            
+
                         </span>
                     </div>
                 </th>
             </tr>
-            <tr>
-                <th class="Id">#</th>
-                <th>Название</th>
-                <th>Деятельность</th>
-                <th>Сайты</th>
-                <th>Примечание</th>
-                <th>Телефоны</th>
-                <th>Статус</th>
-                <th>Последняя запись</th>
-                <th class="actions-col" >Действия</th>
+            <tr >
+                <th class="Id sorting-th">
+                    #
+                    <i class="fas fa-sort-up sort-arrow"></i>
+                    <i class="fas fa-sort-down sort-arrow"></i>
+                </th>
+                <th class="order-column sorting-th">
+                    Название
+                    <i class="fas fa-sort-up sort-arrow"></i>
+                    <i class="fas fa-sort-down sort-arrow"></i>
+                </th>
+                <th class="sorting-th">
+                    Деятельность
+                    <i class="fas fa-sort-up sort-arrow"></i>
+                    <i class="fas fa-sort-down sort-arrow"></i>
+                </th>
+                <th class="sorting-th">
+                    Сайты
+                    <i class="fas fa-sort-up sort-arrow"></i>
+                    <i class="fas fa-sort-down sort-arrow"></i>
+                </th>
+                <th class="sorting-th">
+                    Примечание
+                    <i class="fas fa-sort-up sort-arrow"></i>
+                    <i class="fas fa-sort-down sort-arrow"></i>
+                </th>
+                <th class="sorting-th">
+                    Телефоны
+                    <i class="fas fa-sort-up sort-arrow"></i>
+                    <i class="fas fa-sort-down sort-arrow"></i>
+                </th>
+                <th class="sorting-th">
+                    Статус
+                    <i class="fas fa-sort-up sort-arrow"></i>
+                    <i class="fas fa-sort-down sort-arrow"></i>
+                </th>
+                <th class="sorting-th">
+                    Последняя запись
+                    <i class="fas fa-sort-up sort-arrow"></i>
+                    <i class="fas fa-sort-down sort-arrow"></i>
+                </th>
+                <th class="actions-col">
+                    Действия
+                </th>
             </tr>
         </thead>
     </table>
@@ -87,9 +133,9 @@
             <tbody>
                 @for (int i = 0; i < 100; i++)
                 {
-                    <tr class="data-tr" >
+                    <tr class="data-tr">
                         <td class="Id">@(i)</td>
-                        <td>Название</td>
+                        <td class="order-column">Название</td>
                         <td>Деятельность</td>
                         <td>Сайты</td>
                         <td>Примечание</td>
@@ -97,7 +143,7 @@
                         <td>Телефоны</td>
                         <td>Статус</td>
                         <td>Последняя запись</td>
-                        <td class="text-left actions-col" >
+                        <td class="text-left actions-col">
                             <span class="btn btn-success btn-xs edit-btn">
                                 <i class="fas fa-edit"></i>
                             </span>
