--- a/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
@@ -11,9 +11,81 @@
 
 
 @section Scripts {
-    <script src="~/js/companies/companies-list.js" asp-append-version="true"></script>
+    <script src="~/js/companies/edit-company.js" asp-append-version="true"></script>
 }
 
 <div v-cloak class="company-edit-page">
+
+    <div v-bind:html="errorsView" class="errors-holder"></div>
+
+    <ul class="nav nav-tabs">
+        <li class="nav-item"><a class="nav-link" v-bind:class="{ 'active': activeTab == 'main' }" v-on:click="activeTab = 'main'" href="javascript:">{{ entity.Name || 'Данные о компании' }}</a></li>
+        <li class="nav-item"><a class="nav-link" v-bind:class="{ 'active': activeTab == 'log' }" v-on:click="activeTab = 'log'" href="javascript:;">Лог</a></li>
+    </ul>
+
+    <div class="current-page-content">
+        <div v-if="activeTab == 'main'">
+            <h4 class="mt-3">Данные о компании</h4>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Название</label>
+                <div class="col-sm-6">
+                    <input type="text" v-model="entity.Name" class="form-control" placeholder="Краткое название фирмы">
+                </div>
+                <label class="col-sm-2 col-form-label text-right">Статус</label>
+                <div class="col-sm-2">
+                    <select v-model="entity.StateId" class="form-control">
+                        <option value="">Черновик</option>
+                        <option value="1">В процессе</option>
+                        <option value="2">Успех</option>
+                        <option value="3">Отказ</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Род деятельности</label>
+                <div class="col-sm-10">
+                    <input type="text" v-model="entity.ActivityType" class="form-control" placeholder="Описание рода деятельности">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Сайты</label>
+                <div class="col-sm-10">
+                    <input type="text" v-model="entity.WebSites" class="form-control" placeholder="Список сайтов через разделитель">
+                </div>
+            </div>
+            <div class="">
+                <label class="col-form-label">Примечание</label>
+                <div class="">
+                    <textarea class="form-control" v-model="entity.Remarks" rows="6" placeholder="Текст примечания"></textarea>
+                </div>
+            </div>
+            <div class="mt-5 text-center">
+                <span v-on:click="save" class="btn btn-success">Сохранить</span>
+                <a href="/Companies/" class="btn btn-info">Отмена</a>
+            </div>
+        </div>
+        <div v-if="activeTab == 'log'">
+            <div class="row">
+                <div class="col mt-3">
+                    <div class="phone-holder">
+                        <div class="phones-list">
+                            <select class="form-control">
+                                <option>+7 918 9837491 - основной</option>
+                            </select>
+                        </div>
+                        <div class="phoens-management">
+                            <span class="btn btn-success">Редактировать</span>
+                            <span class="btn btn-info ml-2">Добавить</span>
+                        </div>
+                    </div>
+                    <div>
+                        <textarea placeholder="Описание звонка" rows="6" class="form-control mt-3" ></textarea>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 </div>
