--- a/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Index.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Index.cshtml
@@ -144,14 +144,13 @@
                     <td v-bind:class="{ 'order-column': !!config.columns.ActivityType.sorting }">{{ item.ActivityType }}</td>
                     <td>{{ item.WebSites }}</td>
                     <td v-bind:class="{ 'order-column': !!config.columns.Remarks.sorting }">{{ item.Remarks }}</td>
-
                     <td>{{ item.PhoneNumbersList }}</td>
                     <td v-bind:class="{ 'order-column': !!config.columns.StateId.sorting }">{{ item.State }}</td>
                     <td v-bind:class="{ 'order-column': !!config.columns.LastCallRecordDate.sorting }">{{ item.LastCallRecordDateStr }}</td>
                     <td class="text-left actions-col">
-                        <span class="btn btn-success btn-xs edit-btn">
+                        <a v-bind:href="'/Companies/Edit/' + item.Id" class="btn btn-success btn-xs edit-btn">
                             <i class="fas fa-edit"></i>
-                        </span>
+                        </a>
                         <span class="btn btn-danger btn-xs delete-btn">
                             <i class="fas fa-trash"></i>
                         </span>
