--- a/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
@@ -18,74 +18,132 @@
 
     <div v-bind:html="errorsView" class="errors-holder"></div>
 
-    <ul class="nav nav-tabs">
-        <li class="nav-item"><a class="nav-link" v-bind:class="{ 'active': activeTab == 'main' }" v-on:click="activeTab = 'main'" href="javascript:">{{ entity.Name || 'Данные о компании' }}</a></li>
-        <li class="nav-item"><a class="nav-link" v-bind:class="{ 'active': activeTab == 'log' }" v-on:click="activeTab = 'log'" href="javascript:;">Лог</a></li>
-    </ul>
+    <h2>
+        <span class="pb-2">{{ entity.Name || 'Данные о компании' }}</span>
+        <span v-on:click="save" class="btn btn-success float-right ml-2 btn-sm">Сохранить</span>
+        <a href="/Companies/" class="btn btn-info float-right btn-sm">Отмена</a>
+    </h2>
 
     <div class="current-page-content">
-        <div v-if="activeTab == 'main'">
-            <h4 class="mt-3">Данные о компании</h4>
+        <div>
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Название</label>
-                <div class="col-sm-6">
-                    <input type="text" v-model="entity.Name" class="form-control" placeholder="Краткое название фирмы">
+                <label class="col-sm-1 ">Название</label>
+                <div class="col-sm-3">
+                    <input type="text" v-model="entity.Name" class="form-control form-control-sm" placeholder="Краткое название фирмы">
                 </div>
-                <label class="col-sm-2 col-form-label text-right">Статус</label>
-                <div class="col-sm-2">
-                    <select v-model="entity.StateId" class="form-control">
+                <label class="col-sm-1 text-right">Сайты</label>
+                <div class="col-sm-3">
+                    <input type="text" v-model="entity.WebSites" class="form-control form-control-sm" placeholder="Список сайтов через разделитель">
+                </div>
+                <label class="col-sm-1 text-right">Статус</label>
+                <div class="col-sm-3">
+                    <select v-model="entity.StateId" class="form-control  form-control-sm">
                         <option value="">Черновик</option>
                         <option value="1">В процессе</option>
                         <option value="2">Успех</option>
                         <option value="3">Отказ</option>
                     </select>
                 </div>
+
             </div>
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Род деятельности</label>
-                <div class="col-sm-10">
-                    <input type="text" v-model="entity.ActivityType" class="form-control" placeholder="Описание рода деятельности">
+                <label class="col-sm-1">Деятельность</label>
+                <div class="col-sm-11">
+                    <input type="text" v-model="entity.ActivityType" class="form-control form-control-sm" placeholder="Описание рода деятельности">
                 </div>
             </div>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Сайты</label>
-                <div class="col-sm-10">
-                    <input type="text" v-model="entity.WebSites" class="form-control" placeholder="Список сайтов через разделитель">
-                </div>
-            </div>
+
             <div class="">
-                <label class="col-form-label">Примечание</label>
                 <div class="">
-                    <textarea class="form-control" v-model="entity.Remarks" rows="6" placeholder="Текст примечания"></textarea>
+                    <textarea class="form-control form-control-sm" v-model="entity.Remarks" rows="3" placeholder="Текст примечания"></textarea>
                 </div>
             </div>
-            <div class="mt-5 text-center">
-                <span v-on:click="save" class="btn btn-success">Сохранить</span>
-                <a href="/Companies/" class="btn btn-info">Отмена</a>
+            <div class="mt-1 text-center">
             </div>
         </div>
-        <div v-if="activeTab == 'log'">
+        <div>
             <div class="row">
-                <div class="col mt-3">
+                <div class="col mt-2">
                     <div class="phone-holder">
                         <div class="phones-list">
-                            <select class="form-control">
-                                <option>+7 918 9837491 - основной</option>
+                            <select v-bind:disabled="entity.Phones.length === 0" class="form-control form-control-sm">
+                                <template v-for="phone in entity.Phones">
+                                    <option>{{ phone.Number }} - {{ phone.Remarks }}</option>
+                                </template>
                             </select>
                         </div>
                         <div class="phoens-management">
-                            <span class="btn btn-success">Редактировать</span>
-                            <span class="btn btn-info ml-2">Добавить</span>
+                            <span v-bind:class="{ 'disabled' : entity.Phones.length === 0 }" class="btn btn-success btn-sm">
+                                <i class="fas fa-edit"></i>
+                                Редактировать телефон
+                            </span>
+                            <span v-on:click="addPhone" class="btn btn-secondary ml-2 btn-sm">
+                                <i class="fas fa-plus-circle"></i>
+                                Добавить телефон
+                            </span>
+                            <span v-bind:class="{ 'disabled' : !callDescription || !selectedPhoneId }" class="btn btn-danger ml-2 btn-sm">
+                                <i class="fas fa-save"></i>
+                                Сохранить запись
+                            </span>
                         </div>
                     </div>
                     <div>
-                        <textarea placeholder="Описание звонка" rows="6" class="form-control mt-3" ></textarea>
+                        <textarea placeholder="Описание звонка" v-model="callDescription" rows="3" class="form-control mt-3"></textarea>
                     </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col">
+                    <table class="records-table table table-bordered table-hover table-sm table-striped">
+                        <tbody>
+                            <tr>
+                                <td>Первая запись</td>
+                                <td class="phone">+7(123)456-78-91</td>
+                                <td class="date">10.10.2019 12:12:00</td>
+                            </tr>
+                            <tr>
+                                <td>Вторая запись</td>
+                                <td class="phone">+7(123)456-78-91</td>
+                                <td class="date">10.10.2019 12:12:00</td>
+                            </tr>
+                            <tr>
+                                <td>Третья запись</td>
+                                <td class="phone">+7(123)456-78-91</td>
+                                <td class="date">10.10.2019 12:12:00</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
 
-
+<div v-show="visible" class="edit-phone-modal" v-cloak>
+    <div class="modal" tabindex="-1" style="display: inline-block !important" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Редактирование телефона</h5>
+                    <button type="button"  v-on:click="close"  class="close" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <div>
+                            <input type="text" class="form-control phone-input" v-model="entity.Number" v-on:keyup.enter="save" placeholder="телефон"/>
+                        </div>
+                    </div>
+                    <div>
+                        <div><input type="text" class="form-control"  v-model="entity.Remarks"  placeholder="Описание" /></div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" v-on:click="save" class="btn btn-danger">Сохранить</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
