--- a/ColdCallsTracker/ColdCallsTracker/wwwroot/css/site.css
+++ b/ColdCallsTracker/ColdCallsTracker/wwwroot/css/site.css
@@ -197,5 +197,5 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .form-control {
-    background-color: #f2f2f21f !important;
+    background-color: #fbfbfb !important;
 }
